view-responsive.css: Fix vertical alignment of BirdSearchResultsDisplay

--- a/view-responsive.css
+++ b/view-responsive.css
@@ -70,7 +70,7 @@
     .BirdSearchResultsDisplay
     {
         left: 0;
-        top: 45px;
+        top: 49px;
     }
 
     #content > #header
